<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register"
    android:orientation="vertical"
    tools:context="com.example.yanglei.myapplication.RegisterFirstPage"
    android:weightSum="1">

    <TextView
        android:id="@+id/create"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:text="CREATE ACCOUNT"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:orientation="vertical">

        <AutoCompleteTextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="1dp"
            android:layout_marginEnd="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:background="@drawable/rounded_white"
            android:backgroundTint="#826056"
            android:drawableLeft="@drawable/email"
            android:drawablePadding="10dp"
            android:hint="Enter your Email"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/untext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:paddingLeft="5dp"
            android:text="@string/Username"
            android:textColor="@color/white1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:orientation="vertical">

        <AutoCompleteTextView
            android:id="@+id/password"
            android:layout_marginRight="20dp"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="1dp"
            android:layout_marginEnd="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:background="@drawable/rounded_white"
            android:backgroundTint="#826056"
            android:drawableLeft="@drawable/lock"
            android:drawablePadding="5dp"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/pwtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:paddingLeft="5dp"
            android:text="@string/Password"
            android:textColor="@color/white1"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:orientation="vertical">
        <AutoCompleteTextView
            android:id="@+id/NRIC"
            android:inputType="textPersonName"
            android:text="NRIC"
            android:layout_marginRight="20dp"
            android:textColor="@color/white1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="1dp"
            android:layout_marginEnd="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:background="@drawable/rounded_white"
            android:backgroundTint="#826056"
            android:drawableLeft="@drawable/lock"
            android:drawablePadding="5dp"
            android:hint="@string/Password"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/ictext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:paddingLeft="5dp"
            android:text="@string/nric"
            android:textColor="@color/white1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <AutoCompleteTextView
                android:id="@+id/CC"
                android:layout_width="80dp"
                android:drawableLeft="@drawable/phoneicon"
                android:inputType="phone"
                android:layout_marginRight="20dp"
                android:textColor="@color/white1"
                android:layout_height="40dp"
                android:layout_marginBottom="1dp"
                android:layout_marginEnd="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/rounded_white"
                android:backgroundTint="#826056"
                android:drawablePadding="5dp"
                android:hint="+65"
                android:paddingLeft="15dp"
                android:paddingStart="15dp"
                android:textSize="14sp"/>

            <AutoCompleteTextView
                android:id="@+id/Phone"
                android:layout_width="192dp"
                android:layout_height="40dp"
                android:layout_marginBottom="1dp"
                android:layout_marginEnd="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="15dp"
                android:layout_weight="1.01"
                android:background="@drawable/rounded_white"
                android:backgroundTint="#826056"
                android:drawableLeft="@drawable/phoneicon"
                android:drawablePadding="5dp"
                android:hint="Phone number"
                android:inputType="phone"
                android:paddingLeft="15dp"
                android:paddingStart="15dp"
                android:textColor="@color/white1"
                android:textSize="14sp" />/>

        </LinearLayout>


        <TextView
            android:id="@+id/pntext"
            android:paddingLeft="5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#c417ccd6" />

    </LinearLayout>

    <Button
        android:id="@+id/Next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:gravity="center"
        android:text="Continue"
        android:textColor="@color/white"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_button"/>

</LinearLayout>
