<resources>
    <string name="app_name">Verifie</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="login">login</string>
    <string name="SignUp">SignUp</string>
    <string name="action_settings">action_settings</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="mobile_phone">Mobile Phone</string>
    <string name="nric">NRIC</string>
    <string name="home_address">Home Address</string>
    <string name="passport">Passport</string>
    <string name="optional">(Optional)</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="next">Next</string>
    <string name="take_picture">Take picture</string>
    <string name="GetStart" />

</resources>
