<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/reg"
    android:orientation="vertical"
    tools:context="com.example.yanglei.myapplication.RegisterFirstPage"
    android:weightSum="1">

    <TextView
        android:id="@+id/create"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:text="CREATE ACCOUNT"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"
        android:background="@drawable/rounded_white"
        android:drawableLeft="@drawable/email1"
        android:drawablePadding="15dp"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:paddingLeft="15dp"
        android:paddingStart="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white1"
        android:textSize="16dp"
        android:textStyle="bold" />

        <TextView
            android:id="@+id/untext"
            android:paddingLeft="5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#c417ccd6" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"
        android:background="@drawable/rounded_white"
        android:drawableLeft="@drawable/pw"
        android:drawablePadding="15dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:paddingStart="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white1"
        android:textSize="16dp"
        android:textStyle="bold" />

        <TextView
            android:id="@+id/pwtext"
            android:paddingLeft="5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="At least One lower and upper case letter\nAt least 8 spaces"
            android:textColor="#ffffff" />


    <EditText
        android:id="@+id/NRIC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"
        android:background="@drawable/rounded_white"
        android:drawableLeft="@drawable/nric"
        android:drawablePadding="15dp"
        android:hint="NRIC"
        android:inputType="textPersonName"
        android:paddingLeft="15dp"
        android:paddingStart="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white1"
        android:textSize="16dp"
        android:textStyle="bold" />

        <TextView
            android:id="@+id/ictext"
            android:paddingLeft="5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#c417ccd6" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/rounded_white"
        android:textColor="@color/white"
        android:textColorHint="@color/white1"
        android:textStyle="bold"
        android:weightSum="1">

        <EditText
            android:id="@+id/CC"
            android:layout_width="120dp"
            android:layout_height="44dp"
            android:layout_marginBottom="5dp"
            android:background="#00ffffff"
            android:drawableLeft="@drawable/pn"
            android:drawablePadding="15dp"
            android:inputType="phone"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white1"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/Phone"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1.01"
            android:background="#00ffffff"
            android:hint="Phone Number"
            android:inputType="phone"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white1"
            android:textSize="16dp"
            android:textStyle="bold" />

    </LinearLayout>


        <TextView
            android:id="@+id/pntext"
            android:paddingLeft="5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#c417ccd6" />

    <Button
        android:id="@+id/Next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:text="Continue"
        android:background="@drawable/buttonwhite"
        android:textColor="@color/white" />

</LinearLayout>
